--- a/sum.jade
+++ b/sum.jade
@@ -4,7 +4,7 @@ html
         link(href="http://cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet")
     body
         div.container
-            h1.text-center 爱客仕前端组 #[b #{year}年#{month}月] 工作汇总
+            h1.text-center 前端组 #[b #{year}年#{month}月] 工作汇总
             table.table.table-bordered.table.table-hover.table-striped
                 each row in rowList
                     tr
